--- a/src/test/java/utilities/sayeedData.properties
+++ b/src/test/java/utilities/sayeedData.properties
@@ -23,7 +23,7 @@ OrderStatusId2 = Cancelled
 PaymentStatusId2 = Refunded
 CategoryId2 = Computers >> Desktops
 ManufacturerId2 = HP
-BillingCountryId2 = Pakistan
+BillingCountryId2 = Afghanistan
 VendorId2 = Vendor 2
 
 ****************************
