--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,13 @@
   </properties>
 
   <dependencies>
-   
+ 
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
     
             <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
